# agentanvil

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
agentanvil/: __init__.py  agent.py  cli.py  dataset.py  evaluator.py  runner.py  schema.py  supervisor_client.py  trajectory.py
agentanvil/adapter/: __init__.py  agent_lightning.py  autogen.py  claude_code.py  crewai.py  langchain.py  langgraph.py  llamaindex.py  minimal.py  openai_agents.py  openhands.py
agentanvil/runtime/: __init__.py  opensandbox.py
agentanvil/trace/: __init__.py  base.py  langfuse.py  local.py  otel.py
agentanvil/verifier/: __init__.py  base.py  gsm8k.py  humaneval.py  jordan_count.py  swe_bench_lite.py
deploy/: kind-setup.sh
docker/: .env.langfuse.example  docker-compose.langfuse.yml
docs/: ADAPTERS.md  DEPLOYMENT.md  DESIGN.md  TRAJECTORY_PROTOCOL.md  VERIFIERS.md  k8s_runbook.md
examples/: generate_sample_task.py  real_rl_rollout.py  run_jordan_count.py  seed_demo_traces.py  supervise_demo.py
examples/sample_tasks/: task_000.json
scripts/: check_clean.sh  kind_deploy.sh  push_github.sh  record_demo_gif.sh
supervisor/: Cargo.toml  README.md
supervisor/src/: main.rs
tests/: test_agent_lightning_real.py  test_agent_lightning_stub.py  test_cli.py  test_dataset.py  test_evaluator.py  test_new_adapters_conformance.py  test_new_verifiers.py  test_opensandbox_runtime.py  test_protocol_conformance.py
traces/: bench_cc_gsm8k.jsonl  bench_cc_humaneval.jsonl
ui/: Dockerfile  README.md  package-lock.json  package.json
ui/app/: globals.css  (+2 more)
(+29 files in other folders)
