[package]
name = "agentanvil-supervisor"
version = "0.0.1"
edition = "2021"
description = "Narrow-scope process supervisor for AgentAnvil rollouts"
license = "MIT"

[[bin]]
name = "agentanvil-supervisor"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.29", features = ["signal", "process"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
